--- a/portfolio1.html
+++ b/portfolio1.html
@@ -7,7 +7,7 @@
     <style>
         body {
             background: #000; /* 将整个网页背景设为纯黑 */
-            margin: 0;        /* 你原有的代码保持不变 */
+            margin: 0;      
         }
         .back-btn {
             position: fixed;
@@ -23,49 +23,44 @@
             box-shadow: 0 3px 6px rgba(0,0,0,0.1); /* 新增投影 */
             transition: all 0.3s ease;
         }
-
         /* 悬停效果优化 */
         .back-btn:hover {
             background: rgba(0, 0, 0, 0.7);
             transform: translateX(-50%) scale(1.05);
         }
 
-        /* ===== 关键修改部分 ===== */
-        .masonry-item {
-            background: none; /* 移除黑色背景 */
-            min-height: 100vh;
-            width: 100%;
-            max-width: 1920px;  /* 新增：限制最大宽度 */
-            margin: 0 auto;     /* 新增：水平居中 */
-            position: relative;
-            overflow: hidden;
-            transition: transform 0.3s cubic-bezier(0.4, 0, 0.2, 1);
-            border-bottom: 1px solid #333; /* 用边框替代间距 */
-        }
-
-        .masonry-item img {
-            width: 80%;       /* 固定宽度为容器100% */
-            height: auto;      /* 高度自适应 */
-            transition: all 0.5s cubic-bezier(0.23, 1, 0.32, 1); /* 更流畅的动画曲线 */
-            object-fit: cover; /* 裁剪适配 */
-            display: block;    /* 消除图片底部间隙 */
-            margin: 0 auto;    /* 水平居中 */
-            vertical-align: bottom; /* 消除图片底部间隙 */
-        }
-        .masonry-item:last-child {
-            border-bottom: none; /* 移除最后一个边框 */
-        }
-                /* ===== 保持原有核心样式 ===== */
+                /* ===== 核心样式 ===== */
         html {
             scroll-behavior: smooth;
         }
         .masonry-container {
-            background: #000;
             padding: 0;
             width: 100%;
             max-width: 1920px;       /* 限制最大宽度 */
             margin: 0 auto;
         }
+        .masonry-item {
+            box-sizing: border-box; /* 新增 */
+            min-height: auto;       /* 移除100vh限制 */
+            height: auto;          /* 高度自适应内容 */
+            padding: 20px 0;       /* 添加垂直间距 */
+            border-bottom: 1px solid #000;
+            margin: 0 auto;
+            max-width: 1920px;
+            position: relative;
+            overflow: hidden;
+            transition: transform 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+        }
+        .masonry-item img {
+            width: 100%;
+            height: auto;
+            max-height: 100vh;     /* 限制最大高度 */
+            object-fit: contain;
+            display: block;
+            margin: 0 auto;
+            box-shadow: 0 10px 30px rgba(0,0,0,0.3); /* 添加投影增强层次 */
+        }
+
         .masonry-item.visible {
             opacity: 1;
             transform: translateY(0);
@@ -73,18 +68,24 @@
         
         /* ===== 响应式优化 ===== */
         @media (max-width: 1920px) {
+            .masonry-item {
+                width: 90%;        /* 增加边距 */
+            }
             .masonry-item img {
-                min-height: 80vh; /* 保持最小高度 */
-                object-fit: contain;
+                max-height: 90vh;  /* 留出呼吸空间 */
             }
         }
 
         @media (max-width: 768px) {
+            .masonry-item {
+                width: 95%;
+                padding: 10px 0;   /* 缩小间距 */
+            }
             .masonry-item img {
-                min-height: 60vh; /* 移动端调整高度 */
+                max-height: 85vh;
             }
         }
-
+        
     </style>
 </head>
 <body>
